--- a/index.html
+++ b/index.html
@@ -65,9 +65,7 @@ bringing together people from all disciplines to share current research and deve
 -->
 <p>
   <strong>Who:</strong>
-  The course is aimed at graduate students and other researchers.
-  <strong>You don't need to have any previous knowledge of the tools that will
-    be presented at the workshop.</strong>
+  The course is aimed at researchers with a minmial knowledge of R
 </p>
 
 <!--
