--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
   the pitch.
 -->
 <p>
-  <a href="{{site.swc_site}}">The BioInfoSummer series introduces bioinformatics and mathematical 
+  The BioInfoSummer series introduces bioinformatics and mathematical 
   and computational biology to advanced undergraduate and postgraduate students, 
   researchers and professionals working in a variety of fields. 
 </p>
@@ -65,7 +65,7 @@ bringing together people from all disciplines to share current research and deve
 -->
 <p>
   <strong>Who:</strong>
-  The course is aimed at researchers with a minmial knowledge of R
+  The course is aimed at researchers with a minimal knowledge of R.
 </p>
 
 <!--
@@ -93,24 +93,15 @@ bringing together people from all disciplines to share current research and deve
 
 <p>
   <strong>Requirements:</strong> 
-  Participants must bring a wifi-capable laptop, 
-  from which they will logon to the 
-  <a href="http://resbaz.cloud.edu.au/ ">Data Intensive Tools for the Cloud</a>
-  (DIT4C) environment on the
-  <a href="http://its.unimelb.edu.au/research/our_services/cloud_computing/research_cloud">NeCTAR Research Cloud</a>.
-  This environment has all the required software pre-installed,
-  so there's nothing participants need to bring or do in preparation for the workshop.
+  Participants must bring a wifi-capable laptop, with a current installation of R and RStudio.
+  R is available for all operating systems at the <a href="http://cran.r-project.org/">CRAN</a> website.
+  RStudio is available at the <a href="https://www.rstudio.com/products/rstudio/download/">RStudio</a> website.
 </p>
-<p>
-  Having said that, there are software installation instructions <a href="#software_install">below</a> 
-  for participants who'd like to install the software on their own computer before or after the workshop.
-  Also note that participants are required to abide by Software Carpentry's
-  <a href="{{site.swc_site}}/conduct.html">Code of Conduct</a>.
-</p>  
 
 <p>
   <strong>Wifi:</strong>
-  Laptops must have a working WiFi adapter, and connection will be through your usual University of Adelaide login. Attendees from other academic institutions will have a login provided on the day.
+  Laptops must have a working WiFi adapter, and connection will be through your BioInfoSummer login, 
+  or through the eduroam network.
 </p>
 
 <!--
