--- a/index.html
+++ b/index.html
@@ -24,23 +24,6 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
   And run 'tools/check' *before* committing to make sure that changes are good.
 -->
 
-<!--
-  EVENTBRITE
-  This block includes the Eventbrite registration widget if
-  'eventbrite' has been set in the header.  You can delete it if you
-  are not using Eventbrite, or leave it in, since it will not be
-  displayed if the 'eventbrite' field in the header is not set.
--->
-{% if page.eventbrite %}
-<iframe
-  src="https://www.eventbrite.com/tickets-external?eid={{page.eventbrite}}&ref=etckt"
-  frameborder="0"
-  width="100%"
-  height="248px"
-  scrolling="auto">
-</iframe>
-{% endif %}
-
 <h2>General Information</h2>
 
 <!--
@@ -54,8 +37,8 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
   researchers and professionals working in a variety of fields. 
 </p>
 <p>
-Established in 2003, BioInfoSummer is a key training event in Australia, 
-bringing together people from all disciplines to share current research and developments in Bioinformatics.
+  Established in 2003, BioInfoSummer is a key training event in Australia, 
+  bringing together people from all disciplines to share current research and developments in Bioinformatics.
 </p>
 
 <!--
@@ -66,6 +49,7 @@ bringing together people from all disciplines to share current research and deve
 <p>
   <strong>Who:</strong>
   The course is aimed at researchers with a minimal knowledge of R.
+  THere is n alternative session for those who no experience of R.
 </p>
 
 <!--
@@ -114,7 +98,8 @@ bringing together people from all disciplines to share current research and deve
   <strong>Contact</strong>:
   Please mail
   {% if page.contact %}
-    <a href='mailto:{{page.contact}}'>{{page.contact}}</a>
+    <a href='mailto:{{page.contact}}'>Steve Pederson</a> or
+    <a href='mailto:pengyi.yang.research@gmail.com'>Dr Pengyi Yang</a>
   {% else %}
     <a href='mailto:{{site.contact}}'>{{site.contact}}</a>
   {% endif %}
@@ -162,45 +147,40 @@ bringing together people from all disciplines to share current research and deve
 
 <div class="row">
   <div class="col-md-6">
-    <h3>The Unix Shell</h3>
+    <h3>Data Types & Loading Data</h3>
     <ul>
       <li>Files and directories</li>
-      <li>History and tab completion</li>
-      <li>Pipes and redirection</li>
-      <li>Looping over files</li>
-      <li>Creating and running shell scripts</li>
-      <li>Finding things</li>
-      <li><a href="{{site.swc_githubio}}/shell-novice/reference.html">Reference...</a></li>
-    </ul>
-  </div>
-  <div class="col-md-6">
-    <h3>Version Control with Git</h3>
-    <ul>
-      <li>Creating a repository</li>
-      <li>Recording changes to files: <code>add</code>, <code>commit</code>, ...</li>
-      <li>Viewing changes: <code>status</code>, <code>diff</code>, ...</li>
-      <li>Ignoring files</li>
-      <li>Working on the web: <code>clone</code>, <code>pull</code>, <code>push</code>, ...</li>
-      <li>Resolving conflicts</li>
-      <li>Open licenses</li>
-      <li>Where to host work, and why</li>
-      <li><a href="{{site.swc_githubio}}/git-novice/reference.html">Reference...</a></li>
+      <li><a href="404">Reference...</a></li>
     </ul>
   </div>
 </div>
 
 <div class="row">
   <div class="col-md-6">
-    <h3>Programming in Python</h3>
+    <h3>Visualising Data</h3>
     <ul>
-      <li>Using libraries</li>
-      <li>Working with arrays</li>
-      <li>Reading and plotting data</li>
-      <li>Creating and using functions</li>
-      <li>Loops and conditionals</li>
-      <li>Defensive programming</li>
-      <li>Using Python from the command line</li>
-      <li><a href="{{site.swc_githubio}}/python-novice-inflammation/reference.html">Reference...</a></li>
+      <li>Using the package ggplot2</li>
+      <li><a href="404">Reference...</a></li>
+    </ul>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-6">
+    <h3>Functions In R</h3>
+    <ul>
+      <li>What is a Function</li>
+      <li><a href="404">Reference...</a></li>
+    </ul>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-6">
+    <h3>clueR</h3>
+    <ul>
+      <li>Using the package clueR</li>
+      <li><a href="404">Reference...</a></li>
     </ul>
   </div>
 </div>
