--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
   And run 'tools/check' *before* committing to make sure that changes are good.
 -->
 
-<h2>General Information</h2>
+<h2>BioInfoSummer 2015</h2>
 
 <!--
   INTRODUCTION
@@ -32,7 +32,7 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
   the pitch.
 -->
 <p>
-  The BioInfoSummer series introduces bioinformatics and mathematical 
+  The <a href="http://bis15.amsi.org.au/bis-15/">BioInfoSummer</a> series introduces bioinformatics and mathematical 
   and computational biology to advanced undergraduate and postgraduate students, 
   researchers and professionals working in a variety of fields. 
 </p>
@@ -49,7 +49,7 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
 <p>
   <strong>Who:</strong>
   The course is aimed at researchers with a minimal knowledge of R.
-  THere is n alternative session for those who no experience of R.
+  There is an alternative session for those who have no experience of R.
 </p>
 
 <!--
