--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
   Explain who your audience is.  (In particular, tell readers if the
   workshop is only open to people from a particular institution.
 -->
+<h2>R Workshops - Stream C</h2>
+<h3>Introduction to programming, functions and data visualisation</h3>
 <p>
   <strong>Who:</strong>
   The course is aimed at researchers with a minimal knowledge of R.
