--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 layout: workshop
 root: .
 venue: BioInfoSummer 2015     # brief name of host site without address (e.g., "Euphoric State University")
-address: University of Sydney   # street address of workshop (e.g., "123 Forth Street, Blimingen, Euphoria")
+address: Charles Perkins Centre Seminar Room, University of Sydney   # street address of workshop (e.g., "123 Forth Street, Blimingen, Euphoria")
 country: AU    # country (two-letter ISO code such as "fr" - see https://en.wikipedia.org/wiki/ISO_3166-1)
 language: EN   # language (two-letter ISO code such as "fr" - see https://en.wikipedia.org/wiki/ISO_639-1)
-latlng: -33.8878,151.1872     # fractional latitude and longitude (e.g., "41.7901128,-87.6007318"; you can use http://www.latlong.net/)
+latlng: -33.8874395,151.1814532     # fractional latitude and longitude (e.g., "41.7901128,-87.6007318"; you can use http://www.latlong.net/)
 humandate: December 7, 2015  # human-readable date (e.g., "Feb 17-18, 2020")
 humantime: 3:15 pm - 4:30 pm  # human-readable time (e.g., "9:00 am - 4:30 pm")
 startdate: 2015-12-07  # use YYYY-MM-DD format like "2015-01-01"
