--- a/index.html
+++ b/index.html
@@ -151,8 +151,7 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
   <div class="col-md-6">
     <h3>Data Types & Loading Data</h3>
     <ul>
-      <li>Files and directories</li>
-      <li><a href="404">Reference...</a></li>
+      <li><a href="01_Data.html">01_Data</a></li>
     </ul>
   </div>
 </div>
