Started 03_Inspecting_Data

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
     <h3>Data Types & Loading Data</h3>
     <ul>
       <li><a href="01_Data.html">01_Data</a></li>
-      <li><a href="02_Loading_Data.html">01_Data</a></li>
+      <li><a href="02_Loading_Data.html">02_Loading_Data</a></li>
     </ul>
   </div>
 </div>
