Finished 03_Inspecting_Data

--- a/index.html
+++ b/index.html
@@ -153,16 +153,7 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
     <ul>
       <li><a href="01_Data.html">01_Data</a></li>
       <li><a href="02_Loading_Data.html">02_Loading_Data</a></li>
-    </ul>
-  </div>
-</div>
-
-<div class="row">
-  <div class="col-md-6">
-    <h3>Visualising Data</h3>
-    <ul>
-      <li>Using the package ggplot2</li>
-      <li><a href="404">Reference...</a></li>
+      <li><a href="03_Inspecting_Data.html">03_Inspecting_Data</a></li>
     </ul>
   </div>
 </div>
