--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
   <div class="col-md-6">
     <h3>Functions In R</h3>
     <ul>
-      <li>What is a Function</li>
-      <li><a href="404">Reference...</a></li>
+      <li><a href="04_Introducing_Functions.html">04_Introducing_Functions</a></li>
+      <li><a href="05_Writing_Functions.html">05_Writing_Functions</a></li>
     </ul>
   </div>
 </div>
