Added Customising Functions

--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
     <ul>
       <li><a href="04_Introducing_Functions.html">04_Introducing_Functions</a></li>
       <li><a href="05_Writing_Functions.html">05_Writing_Functions</a></li>
+      <li><a href="06_Customising_Functions.html">06_Customising_Functions</a></li>
     </ul>
   </div>
 </div>
