--- a/06_Customising_Functions.html
+++ b/06_Customising_Functions.html
@@ -105,7 +105,27 @@ ggplot(toothData, aes(x = dose, y = len, fill = supp)) +
 </div>
 <div id="writing-a-function-for-our-needs" class="section level2">
 <h2>Writing A Function For Our Needs</h2>
-<p>Our task is to conduct a <code>t.test()</code> for each dose level, to see if there is any effect on tooth length. First, let’s try it for the low dosage level</p>
+<p>Our task is to conduct a <code>t.test()</code> for each dose level, to see if there is any effect on tooth length. First, let’s try it for the low dosage level. Remember that for a T-test, we have the null and alternate hypotheses:</p>
+<p><span class="math">\(H_0\)</span>: <span class="math">\(\mu_1 = \mu_2\)</span></p>
+<p><span class="math">\(H_A\)</span>: <span class="math">\(\mu_1 \neq \mu_2\)</span></p>
+<p>Firstly we could do this by breaking the data into two groups and testing the Null Hypothesis:</p>
+<pre class="r"><code>lowData &lt;- subset(toothData, dose == &quot;Low&quot;)
+splitData &lt;- split(lowData, lowData$supp)
+g1 &lt;- splitData$OJ$len
+g2 &lt;- splitData$VC$len
+t.test(g1, g2, alternative = &quot;two.sided&quot;)</code></pre>
+<pre><code>## 
+##  Welch Two Sample t-test
+## 
+## data:  g1 and g2
+## t = 3.1697, df = 14.969, p-value = 0.006359
+## alternative hypothesis: true difference in means is not equal to 0
+## 95 percent confidence interval:
+##  1.719057 8.780943
+## sample estimates:
+## mean of x mean of y 
+##     13.23      7.98</code></pre>
+<p>An alternate method would be to use the <em>R</em> syntax, for <code>len</code> <em>is dependent on</em> <code>supp</code>, where the tilde <code>~</code> can be interpreted with this meaning. We can also subset the data as part of the T-test function.</p>
 <pre class="r"><code>t.test(len ~ supp, data = toothData, subset = dose == &quot;Low&quot;)</code></pre>
 <pre><code>## 
 ##  Welch Two Sample t-test
