--- a/index.html
+++ b/index.html
@@ -171,10 +171,9 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
 
 <div class="row">
   <div class="col-md-6">
-    <h3>clueR</h3>
+    <h3>The Package clueR</h3>
     <ul>
-      <li>Using the package clueR</li>
-      <li><a href="404">Reference...</a></li>
+      <li><a href="07_clueR.Rmd">07_clueR</a></li>
     </ul>
   </div>
 </div>
