--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
   <div class="col-md-6">
     <h3>The Package clueR</h3>
     <ul>
-      <li><a href="07_clueR.Rmd">07_clueR</a></li>
+      <li><a href="07_clueR.html">07_clueR</a></li>
     </ul>
   </div>
 </div>
