Added links to CRAN and RStudio

--- a/index.html
+++ b/index.html
@@ -71,6 +71,12 @@ img {
 <h2>This website</h2>
 <p><a href="http://steveped.github.io/BioInfoSummer2015/index.html" class="uri">http://steveped.github.io/BioInfoSummer2015/index.html</a></p>
 </div>
+<div id="r-and-rstudio" class="section level2">
+<h2>R and RStudio</h2>
+<p><em>R</em> is available from <a href="https://www.cran.r-project.org/" class="uri">https://www.cran.r-project.org/</a></p>
+<p>RStudio is available from <a href="https://www.rstudio.com/" class="uri">https://www.rstudio.com/</a></p>
+<p><strong>Please ensure you have a working installation of RStudio!</strong></p>
+</div>
 <div id="todays-data" class="section level2">
 <h2>Today’s Data</h2>
 <p><code>git clone https://github.com/steveped/BioInfoSummer2015.git</code></p>
@@ -79,7 +85,7 @@ img {
 </div>
 <div id="introduction" class="section level2">
 <h2>Introduction</h2>
-<p>The R programming language provides an effective environment for making sense of data that enables us to address various biological questions. In this introduction course, we will illustrate exploratory data analysis that involves calculating numerical and graphical summaries. More specially, we will cover installation of R packages, write basic R functions and examine various visualization tools. For more intermediate participants in the course we will examine more complex visualization tools.</p>
+<p>The R programming language provides an effective environment for making sense of data that enables us to address various biological questions. In this introduction course, we will illustrate exploratory data analysis that involves calculating numerical and graphical summaries. More specially, we will cover installation of R packages, writing basic R functions and examine various visualization tools.<br />For more intermediate participants in the course we will examine more complex visualization tools.</p>
 </div>
 <div id="outline" class="section level2">
 <h2>Outline</h2>
