--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ img {
 <p>The individual sessions are available at the following sites:</p>
 <div id="data-in-r" class="section level3">
 <h3>Data in R</h3>
-<p><a href="01_Data.html">01_Data</a><br /><a href="02_Loading_Data.html">02_Loading_Data</a><br /><a href="03_Inspecting_Data,html">03_Inspecting_Data</a></p>
+<p><a href="01_Data.html">01_Data</a><br /><a href="02_Loading_Data.html">02_Loading_Data</a><br /><a href="03_Inspecting_Data.html">03_Inspecting_Data</a></p>
 </div>
 <div id="functions-in-r" class="section level3">
 <h3>Functions in R</h3>
