--- a/README.html
+++ b/README.html
@@ -118,11 +118,11 @@ $(document).ready(function () {
 </div>
 
 
-<div id="bioinfosummer2015" class="section level1">
-<h1>BioInfoSummer2015</h1>
-<div id="stream-c-introduction-to-programming-functions-and-data-visualisation" class="section level2">
-<h2>Stream C: Introduction to programming, functions and data visualisation</h2>
-<p>This repository contains the material presented in the one hour workshop at for students in the Chool Of Medicine</p>
+<div id="university-of-adelade" class="section level1">
+<h1>University of Adelade</h1>
+<div id="school-of-medicine" class="section level2">
+<h2>School Of Medicine</h2>
+<p>This repository contains the material presented in the one hour workshop at for students in the School Of Medicine</p>
 <p>The page containing all links to the material is at <a href="https://uofabioinformaticshub.github.io/schoolOfMedicine2016/" class="uri">https://uofabioinformaticshub.github.io/schoolOfMedicine2016/</a></p>
 <p>By Steve Pederson</p>
 </div>
